# PEDD

mi_proyecto/: ArbolKD.cpp  ArbolKD.h  Arista.cpp  Arista.h  CMakeLists.txt  Cara.cpp  Cara.h  Grafo.h  ManejadorObj.cpp  ManejadorObj.h  NodoKD.cpp  NodoKD.h  Objeto3D.cpp  Objeto3D.h  Proyecto  Vertice.cpp  Vertice.h  cube.txt  cubo.txt  main  main.cpp  pyramid.txt  rectangular_prism.txt  sistema.cpp  sistema.h
